--- a/2014-latest-pl/dockerfile
+++ b/2014-latest-pl/dockerfile
@@ -4,12 +4,11 @@ SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPref
 
 RUN mkdir C:/SQL2014
 
-COPY sql_server_2014_dev_sp3 C:/SQL2014
+COPY en_sql_server_2014_developer_edition_with_service_pack_3_x64_dvd_083c344f C:/SQL2014
 COPY SQLServer2014-KB4583462-x64.exe C:/SQL2014/patch.exe
 
-RUN C:/SQL2014/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT='NT AUTHORITY\System' /SQLSYSADMINACCOUNTS='BUILTIN\Administrators' /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=Polish_CI_AS
-
-RUN C:/SQL2014/patch.exe /quiet /ACTION=Patch /INSTANCENAME=MSSQLSERVER /IACCEPTSQLSERVERLICENSETERMS
+RUN C:/SQL2014/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT='NT AUTHORITY\System' /SQLSYSADMINACCOUNTS='BUILTIN\Administrators' /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=Polish_CI_AS ; \
+	C:/SQL2014/patch.exe /quiet /ACTION=Patch /INSTANCENAME=MSSQLSERVER /IACCEPTSQLSERVERLICENSETERMS
 
 RUN rm C:/SQL2014 -recurse
 
