--- a/developer/2016-latest/dockerfile
+++ b/developer/2016-latest/dockerfile
@@ -6,14 +6,12 @@ RUN mkdir C:/Setup
 
 COPY enu_sql_server_2016_developer_edition_with_service_pack_3_x64_dvd_ceaed495 C:/Setup
 
-RUN C:/Setup/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT='NT AUTHORITY\System' /SQLSYSADMINACCOUNTS='BUILTIN\Administrators' /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS
+ARG SQLCOLLATION
+ENV SQLCOLLATION=$SQLCOLLATION
+RUN C:/Setup/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT='NT AUTHORITY\System' /SQLSYSADMINACCOUNTS='BUILTIN\Administrators' /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=$env:SQLCOLLATION
 
 RUN rm C:/Setup -recurse
 
 COPY start.ps1 /
-WORKDIR /
-
-ENV SA_PASSWORD _
-ENV ACCEPT_EULA _
-
-CMD .\start -SA_PASSWORD $env:SA_PASSWORD -ACCEPT_EULA $env:ACCEPT_EULA -Verbose
+ENV SA_PASSWORD=_ ACCEPT_EULA=_
+CMD C:/start.ps1 -SA_PASSWORD $env:SA_PASSWORD -ACCEPT_EULA $env:ACCEPT_EULA -Verbose
