--- a/developer/2017-latest/dockerfile
+++ b/developer/2017-latest/dockerfile
@@ -7,15 +7,13 @@ RUN mkdir C:/Setup
 COPY en_sql_server_2017_developer_x64_dvd_11296168 C:/Setup
 COPY SQLServer2017-KB5008084-x64.exe C:/Setup/patch.exe
 
-RUN C:/Setup/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT='NT AUTHORITY\System' /SQLSYSADMINACCOUNTS='BUILTIN\Administrators' /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS ; \
+ARG SQLCOLLATION
+ENV SQLCOLLATION=$SQLCOLLATION
+RUN C:/Setup/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT='NT AUTHORITY\System' /SQLSYSADMINACCOUNTS='BUILTIN\Administrators' /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=$env:SQLCOLLATION ; \
 	C:/Setup/patch.exe /quiet /ACTION=Patch /INSTANCENAME=MSSQLSERVER /IACCEPTSQLSERVERLICENSETERMS
 
 RUN rm C:/Setup -recurse
 
 COPY start.ps1 /
-WORKDIR /
-
-ENV SA_PASSWORD _
-ENV ACCEPT_EULA _
-
-CMD .\start -SA_PASSWORD $env:SA_PASSWORD -ACCEPT_EULA $env:ACCEPT_EULA -Verbose
+ENV SA_PASSWORD=_ ACCEPT_EULA=_
+CMD C:/start.ps1 -SA_PASSWORD $env:SA_PASSWORD -ACCEPT_EULA $env:ACCEPT_EULA -Verbose
