Add Build-Image and Test-Image functions

--- a/developer/2019-latest/dockerfile
+++ b/developer/2019-latest/dockerfile
@@ -8,9 +8,9 @@ COPY en_sql_server_2019_developer_x64_dvd_baea4195 C:/Setup
 COPY SQLServer2019-KB5007182-x64.exe C:/Setup/patch.exe
 
 ARG SQLCOLLATION
-ENV SQLCOLLATION=$SQLCOLLATION
-RUN C:/Setup/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT='NT AUTHORITY\System' /SQLSYSADMINACCOUNTS='BUILTIN\Administrators' /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=$env:SQLCOLLATION ; \
-	C:/Setup/patch.exe /quiet /ACTION=Patch /INSTANCENAME=MSSQLSERVER /IACCEPTSQLSERVERLICENSETERMS
+RUN Write-Host $env:SQLCOLLATION ; \
+C:/Setup/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT='NT AUTHORITY\System' /SQLSYSADMINACCOUNTS='BUILTIN\Administrators' /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=$env:SQLCOLLATION ; \
+C:/Setup/patch.exe /quiet /ACTION=Patch /INSTANCENAME=MSSQLSERVER /IACCEPTSQLSERVERLICENSETERMS
 
 # RUN rm C:/Setup -recurse
 
