--- a/developer/2012-latest/dockerfile
+++ b/developer/2012-latest/dockerfile
@@ -8,9 +8,9 @@ COPY en_sql_server_2012_developer_edition_with_service_pack_4_x64_dvd_11455847 C
 COPY SQLServer2012-KB4583465-x64.exe C:/Setup/patch.exe
 
 ARG SQLCOLLATION
-ENV SQLCOLLATION=$SQLCOLLATION
-RUN C:/Setup/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT='NT AUTHORITY\System' /SQLSYSADMINACCOUNTS='BUILTIN\Administrators' /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=$env:SQLCOLLATION ; \
-	C:/Setup/patch.exe /quiet /ACTION=Patch /INSTANCENAME=MSSQLSERVER /IACCEPTSQLSERVERLICENSETERMS
+RUN Write-Host $env:SQLCOLLATION ; \
+C:/Setup/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT='NT AUTHORITY\System' /SQLSYSADMINACCOUNTS='BUILTIN\Administrators' /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=$env:SQLCOLLATION ; \
+C:/Setup/patch.exe /quiet /ACTION=Patch /INSTANCENAME=MSSQLSERVER /IACCEPTSQLSERVERLICENSETERMS
 
 # RUN rm C:/Setup -recurse
 
