--- a/developer/2016-latest/dockerfile
+++ b/developer/2016-latest/dockerfile
@@ -7,8 +7,8 @@ RUN mkdir C:/Setup
 COPY enu_sql_server_2016_developer_edition_with_service_pack_3_x64_dvd_ceaed495 C:/Setup
 
 ARG SQLCOLLATION
-ENV SQLCOLLATION=$SQLCOLLATION
-RUN C:/Setup/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT='NT AUTHORITY\System' /SQLSYSADMINACCOUNTS='BUILTIN\Administrators' /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=$env:SQLCOLLATION
+RUN Write-Host $env:SQLCOLLATION ; \
+C:/Setup/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT='NT AUTHORITY\System' /SQLSYSADMINACCOUNTS='BUILTIN\Administrators' /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=$env:SQLCOLLATION
 
 # RUN rm C:/Setup -recurse
 
