--- a/developer/2016-latest/dockerfile
+++ b/developer/2016-latest/dockerfile
@@ -10,7 +10,7 @@ ARG SQLCOLLATION
 RUN Write-Host $env:SQLCOLLATION ; \
 C:/Setup/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT='NT AUTHORITY\System' /SQLSYSADMINACCOUNTS='BUILTIN\Administrators' /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=$env:SQLCOLLATION
 
-# RUN rm C:/Setup -recurse
+RUN rm C:/Setup -recurse
 
 COPY start.ps1 /
 ENV SA_PASSWORD=_ ACCEPT_EULA=_
