--- a/developer/2014-latest/dockerfile
+++ b/developer/2014-latest/dockerfile
@@ -12,7 +12,7 @@ RUN Write-Host $env:SQLCOLLATION ; \
 C:/Setup/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT='NT AUTHORITY\System' /SQLSYSADMINACCOUNTS='BUILTIN\Administrators' /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=$env:SQLCOLLATION ; \
 C:/Setup/patch.exe /quiet /ACTION=Patch /INSTANCENAME=MSSQLSERVER /IACCEPTSQLSERVERLICENSETERMS
 
-# RUN rm C:/Setup -recurse
+RUN rm C:/Setup -recurse
 
 COPY start.ps1 /
 ENV SA_PASSWORD=_ ACCEPT_EULA=_
