--- a/developer/2014-latest/dockerfile
+++ b/developer/2014-latest/dockerfile
@@ -1,19 +1,10 @@
-FROM mcr.microsoft.com/dotnet/framework/runtime:3.5-windowsservercore-ltsc2016
+FROM mcr.microsoft.com/dotnet/framework/runtime:3.5-windowsservercore-ltsc2022
 
-SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
-
-RUN mkdir C:/Setup
-
-COPY en_sql_server_2014_developer_edition_with_service_pack_3_x64_dvd_083c344f C:/Setup
-COPY SQLServer2014-KB4583462-x64.exe C:/Setup/patch.exe
-
-ARG SQLCOLLATION
-RUN Write-Host $env:SQLCOLLATION ; \
-C:/Setup/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT='NT AUTHORITY\System' /SQLSYSADMINACCOUNTS='BUILTIN\Administrators' /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=$env:SQLCOLLATION ; \
-C:/Setup/patch.exe /quiet /ACTION=Patch /INSTANCENAME=MSSQLSERVER /IACCEPTSQLSERVERLICENSETERMS
-
-RUN rm C:/Setup -recurse
+ARG SQLCOLLATION SHARE_PATH SHARE_LOGIN SHARE_PASSWORD
+RUN net use X: %SHARE_PATH% /user:"%SHARE_LOGIN%" "%SHARE_PASSWORD%" \
+&& X:/en_sql_server_2014_developer_edition_with_service_pack_3_x64_dvd_083c344f/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT="NT AUTHORITY\System" /SQLSYSADMINACCOUNTS="BUILTIN\Administrators" /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=%SQLCOLLATION% \
+&& X:/SQLServer2014-KB4583462-x64.exe /quiet /ACTION=Patch /INSTANCENAME=MSSQLSERVER /IACCEPTSQLSERVERLICENSETERMS
 
 COPY start.ps1 /
 ENV SA_PASSWORD=_ ACCEPT_EULA=_
-CMD C:/start.ps1 -SA_PASSWORD $env:SA_PASSWORD -ACCEPT_EULA $env:ACCEPT_EULA -Verbose
+CMD powershell -Command (C:/start.ps1 -SA_PASSWORD $env:SA_PASSWORD -ACCEPT_EULA $env:ACCEPT_EULA -Verbose)
