--- a/developer/2016-latest/dockerfile
+++ b/developer/2016-latest/dockerfile
@@ -1,17 +1,9 @@
-FROM mcr.microsoft.com/dotnet/framework/runtime:3.5-windowsservercore-ltsc2016
+FROM mcr.microsoft.com/dotnet/framework/runtime:3.5-windowsservercore-ltsc2022
 
-SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
-
-RUN mkdir C:/Setup
-
-COPY enu_sql_server_2016_developer_edition_with_service_pack_3_x64_dvd_ceaed495 C:/Setup
-
-ARG SQLCOLLATION
-RUN Write-Host $env:SQLCOLLATION ; \
-C:/Setup/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT='NT AUTHORITY\System' /SQLSYSADMINACCOUNTS='BUILTIN\Administrators' /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=$env:SQLCOLLATION
-
-RUN rm C:/Setup -recurse
+ARG SQLCOLLATION SHARE_PATH SHARE_LOGIN SHARE_PASSWORD
+RUN net use X: %SHARE_PATH% /user:"%SHARE_LOGIN%" "%SHARE_PASSWORD%" \
+&& X:/enu_sql_server_2016_developer_edition_with_service_pack_3_x64_dvd_ceaed495/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT="NT AUTHORITY\System" /SQLSYSADMINACCOUNTS="BUILTIN\Administrators" /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=%SQLCOLLATION%
 
 COPY start.ps1 /
 ENV SA_PASSWORD=_ ACCEPT_EULA=_
-CMD C:/start.ps1 -SA_PASSWORD $env:SA_PASSWORD -ACCEPT_EULA $env:ACCEPT_EULA -Verbose
+CMD powershell -Command (C:/start.ps1 -SA_PASSWORD $env:SA_PASSWORD -ACCEPT_EULA $env:ACCEPT_EULA -Verbose)
