Update everything to 20220614

--- a/developer/2016-latest/dockerfile
+++ b/developer/2016-latest/dockerfile
@@ -1,8 +1,9 @@
-FROM mcr.microsoft.com/dotnet/framework/runtime:3.5-windowsservercore-ltsc2022
+FROM mcr.microsoft.com/dotnet/framework/runtime:3.5-20220614-windowsservercore-ltsc2022
 
 ARG SQLCOLLATION SHARE_PATH SHARE_LOGIN SHARE_PASSWORD
 RUN net use X: %SHARE_PATH% /user:"%SHARE_LOGIN%" "%SHARE_PASSWORD%" \
-&& X:/enu_sql_server_2016_developer_edition_with_service_pack_3_x64_dvd_ceaed495/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT="NT AUTHORITY\System" /SQLSYSADMINACCOUNTS="BUILTIN\Administrators" /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=%SQLCOLLATION%
+&& X:/enu_sql_server_2016_developer_edition_with_service_pack_3_x64_dvd_ceaed495/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT="NT AUTHORITY\System" /SQLSYSADMINACCOUNTS="BUILTIN\Administrators" /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=%SQLCOLLATION% \
+&& X:/SQLServer2016-KB5015371-x64.exe /quiet /ACTION=Patch /INSTANCENAME=MSSQLSERVER /IACCEPTSQLSERVERLICENSETERMS
 
 COPY start.ps1 /
 ENV SA_PASSWORD=_ ACCEPT_EULA=_
