--- a/developer/2022-latest/dockerfile
+++ b/developer/2022-latest/dockerfile
@@ -2,7 +2,8 @@ FROM mcr.microsoft.com/dotnet/framework/runtime:4.8.1-20230214-windowsservercore
 
 ARG SQLCOLLATION SHARE_PATH SHARE_LOGIN SHARE_PASSWORD
 RUN net use X: %SHARE_PATH% /user:"%SHARE_LOGIN%" "%SHARE_PASSWORD%" \
-&& X:/enu_sql_server_2022_developer_edition_x64_dvd_7cacf733/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT="NT AUTHORITY\System" /SQLSYSADMINACCOUNTS="BUILTIN\Administrators" /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=%SQLCOLLATION%
+&& X:/enu_sql_server_2022_developer_edition_x64_dvd_7cacf733/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT="NT AUTHORITY\System" /SQLSYSADMINACCOUNTS="BUILTIN\Administrators" /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=%SQLCOLLATION% \
+&& X:/SQLServer2022-KB5023127-x64/setup.exe /quiet /ACTION=Patch /INSTANCENAME=MSSQLSERVER /IACCEPTSQLSERVERLICENSETERMS
 
 COPY start.ps1 /
 ENV SA_PASSWORD=_ ACCEPT_EULA=_
