--- a/developer/2022-latest/dockerfile
+++ b/developer/2022-latest/dockerfile
@@ -1,9 +1,19 @@
 FROM mcr.microsoft.com/dotnet/framework/runtime:4.8.1-windowsservercore-ltsc2022
 
-ARG SQLCOLLATION SHARE_PATH SHARE_LOGIN SHARE_PASSWORD
-RUN net use X: %SHARE_PATH% /user:"%SHARE_LOGIN%" "%SHARE_PASSWORD%" \
-&& X:/enu_sql_server_2022_developer_edition_x64_dvd_7cacf733/setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT="NT AUTHORITY\System" /SQLSYSADMINACCOUNTS="BUILTIN\Administrators" /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=%SQLCOLLATION% \
-&& X:/SQLServer2022-KB5023127-x64/setup.exe /quiet /ACTION=Patch /INSTANCENAME=MSSQLSERVER /IACCEPTSQLSERVERLICENSETERMS
+# Download and extract
+RUN powershell -Command Invoke-WebRequest -Uri "https://go.microsoft.com/fwlink/?linkid=2215158" -OutFile C:\SQL2022-SSEI-Dev.exe \
+&& powershell -Command Invoke-WebRequest -Uri "https://download.microsoft.com/download/9/6/8/96819b0c-c8fb-4b44-91b5-c97015bbda9f/SQLServer2022-KB5023127-x64.exe" -OutFile C:\SQLServer2022-CU-x64.exe \
+&& C:\SQL2022-SSEI-Dev.exe /ENU /Quiet /Action=Download /MediaType=CAB /MediaPath=C:/ \
+&& C:\SQLServer2022-CU-x64.exe /qs /x:SQLServer2022-CU-x64 \
+&& C:\SQLServer2022-DEV-x64-ENU.exe /qs /x:SQLServer2022-DEV-x64-ENU \
+&& copy C:\SQLServer2022-DEV-x64-ENU\1033_ENU_LP\x64\Setup\SQLSUPPORT.MSI C:\SQLServer2022-CU-x64\1033_ENU_LP\x64\Setup\SQLSUPPORT.MSI \
+&& powershell -Command Remove-Item -Recurse -Force C:\SQL2022-SSEI-Dev.exe, C:\SQLServer2022-DEV-x64-ENU.exe, C:\SQLServer2022-DEV-x64-ENU.box, C:\SQLServer2022-CU-x64.exe
+
+# Install
+ARG SQLCOLLATION
+RUN C:\SQLServer2022-DEV-x64-ENU\setup.exe /q /ACTION=Install /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD=qGH6RFvq /SQLSVCACCOUNT="NT AUTHORITY\System" /SQLSYSADMINACCOUNTS="BUILTIN\Administrators" /TCPENABLED=1 /IACCEPTSQLSERVERLICENSETERMS /SQLCOLLATION=%SQLCOLLATION% \
+&& C:\SQLServer2022-CU-x64\setup.exe /quiet /ACTION=Patch /INSTANCENAME=MSSQLSERVER /IACCEPTSQLSERVERLICENSETERMS \
+&& powershell -Command Remove-Item -Recurse -Force C:\SQLServer2022-DEV-x64-ENU, C:\SQLServer2022-CU-x64
 
 COPY start.ps1 /
 ENV ACCEPT_EULA=_ MSSQL_SA_PASSWORD=_ 
